--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "remix build"
+  functions = "netlify/functions"
   publish = "public"
 
 [dev]
-  command = "npm run dev"
+  command = "remix watch"
   port = 3000
 
 [[redirects]]
