--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,9 @@
 [build]
   command = "remix build"
   publish = "public"
-
-[dev]
-  command = "remix watch"
-  port = 3000
+  functions = ".netlify/functions-internal"
 
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/.netlify/functions/server"
   status = 200
-
-[[headers]]
-  for = "/build/*"
-  [headers.values]
-    "Cache-Control" = "public, max-age=31536000, s-maxage=31536000"
