--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "remix build"
+  command = "npm install && remix build"
   publish = "public"
   functions = ".netlify/functions-internal"
 
