--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "readingcertification",
   "private": true,
   "sideEffects": false,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/index.js",
+    "start": "remix-serve build",
     "typecheck": "tsc"
   },
   "dependencies": {
