--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,30 @@
 [build]
   command = "npm run build"
   publish = "public"
-  functions = "netlify/functions"
+
+  [build.environment]
+    # cache Cypress binary in local "node_modules" folder
+    # so Netlify caches it
+    CYPRESS_CACHE_FOLDER = "./node_modules/CypressBinary"
+    # set TERM variable for terminal output
+    TERM = "xterm"
 
 [dev]
-  command = "remix dev"
+  command = "npm run dev"
   port = 3000
-  
-[functions]
-  node_bundler = "esbuild"
-  external_node_modules = ["@remix-run/dev"]
-  
+
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/server"
   status = 200
+
+[[headers]]
+  for = "/build/*"
+  [headers.values]
+    "Cache-Control" = "public, max-age=31536000, s-maxage=31536000"
+
+[[plugins]]
+  package = "netlify-plugin-cypress"
+  [plugins.inputs]
+    record = true
+    group = "Testing Built Site"
