--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 node_modules
 
 /.cache
+/netlify/functions/server/index.js
+/public/build
+/.netlify
 /build
-.env
 
-# Local Netlify folder
-.netlify
+/.env
+
+/app/styles/tailwind.css
+
+cypress/videos/
