--- a/package.json
+++ b/package.json
@@ -14,20 +14,19 @@
     "format": "prettier --write .",
     "generate:css": "npx tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve build",
+    "ntl:ci": "netlify dev",
+    "start": "cross-env NODE_ENV=production netlify dev",
     "typecheck": "tsc"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.0",
     "@netlify/functions": "^1.6.0",
-    "@netlify/remix-adapter": "^1.0.0",
+    "@netlify/remix-adapter": "^2.6.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@remix-run/netlify": "^1.19.3",
-    "@remix-run/node": "^1.19.3",
-    "@remix-run/react": "^1.19.3",
-    "@remix-run/serve": "^1.19.3",
+    "@remix-run/node": "^2.3.1",
+    "@remix-run/react": "^2.3.1",
     "@supabase/supabase-js": "^2.49.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,13 +40,15 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.19.3",
+    "@remix-run/dev": "^2.3.1",
+    "@remix-run/eslint-config": "^2.3.1",
     "@shadcn/ui": "^0.0.4",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
     "cypress": "^14.2.1",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -55,6 +56,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "netlify-plugin-cypress": "^2.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
