--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "start": "cross-env NODE_ENV=production netlify dev",
     "typecheck": "tsc"
   },
+  "eslintIgnore": [
+    "/netlify/functions/server",
+    "/node_modules",
+    "/public/build",
+    "/server/build"
+  ],
   "dependencies": {
     "@hookform/resolvers": "^5.0.0",
     "@netlify/functions": "^1.6.0",
@@ -28,8 +34,10 @@
     "@remix-run/node": "^2.3.1",
     "@remix-run/react": "^2.3.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@testing-library/cypress": "^10.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cypress": "^14.2.1",
     "isbot": "^4.1.0",
     "lucide-react": "^0.486.0",
     "react": "^18.2.0",
@@ -49,7 +57,6 @@
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
-    "cypress": "^14.2.1",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
