--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:remix": "remix build",
     "dev": "run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "remix dev",
+    "dev:remix": "remix dev -c \"node --loader ts-node/esm --require tsconfig-paths/register ./server.ts\"",
     "e2e-test": "cypress run",
     "format": "prettier --write .",
     "generate:css": "npx tailwindcss -o ./app/styles/tailwind.css",
@@ -29,7 +29,9 @@
     "@netlify/functions": "^1.6.0",
     "@netlify/remix-adapter": "^2.6.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@remix-run/node": "^2.3.1",
     "@remix-run/react": "^2.3.1",
@@ -72,6 +74,6 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=18.16.1"
   }
 }
