--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.3.1",
+    "@remix-run/dev": "^2.16.5",
     "@remix-run/eslint-config": "^2.3.1",
     "@shadcn/ui": "^0.0.4",
     "@types/react": "^18.2.20",
@@ -69,6 +69,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.6",
     "vite": "^5.4.16",
     "vite-tsconfig-paths": "^4.2.1"
